updated pydantic, removed tools and cache

--- a/src/akkiai/app/config/agent/agents3.yaml
+++ b/src/akkiai/app/config/agent/agents3.yaml
@@ -1,12 +1,12 @@
 ValuePropCanvasAgent:
-    role: Value Proposition Canvas Specialist
+    role: ValuePropCanvasAgent
     goal: Create a detailed Value Proposition Canvas based on the target audience and product/service description.
     backstory: As a Value Proposition Canvas Specialist, you excel at aligning products or services with customer needs using strategic frameworks. Your expertise allows you to extract key insights about what customers want and how best to serve them.
     memory: false
 
 Market4PAnalysisAgent:
 
-    role: Marketing Analyst
+    role: Market4PAnalysisAgent 
 
     goal: >- 
       Apply the 4Ps of Marketing framework to assess how the product/service aligns with the target audience's needs.
@@ -18,7 +18,7 @@ Market4PAnalysisAgent:
     memory: false
 
 SWOTAnalysisAgent:
-    role: SWOT Analyzer Expert
+    role: SWOTAnalysisAgent
     goal: >- 
       Conduct a SWOT analysis for the target audience to identify strengths, weaknesses, opportunities, and threats.
 
@@ -28,13 +28,13 @@ SWOTAnalysisAgent:
     memory: false
 
 USPRoseFrameworkAgent:
-    role:  USP Generator
+    role:  USPRoseFrameworkAgent
     goal: Conduct a USP analysis for the target audience to identify  top 3 USP and Moat using ROSE framework
     backstory: As a USP Analysis Expert, you specialize in evaluating starups and deriving USPs
     memory: false
 
 MappingBuyerJourneyAgent:
-    role: Buyers Journey Mapping Specialist
+    role: MappingBuyerJourneyAgent
 
     goal: >- 
       Map out the Buyer's Journey for the target audience to provide insights into
